...
import { FormattedMessage } from 'react-intl'
import config from 'helpers/externalConfig'
import styles from './NetworkFilter.scss'

// Human-readable names for networks
const NETWORK_NAMES: Record<string, string> = {
  BTC: 'Bitcoin',
  ETH: 'Ethereum',
  BNB: 'BSC',
  MATIC: 'Polygon',
  ARBETH: 'Arbitrum',
  AURETH: 'Aurora',
  XDAI: 'Gnosis',
  FTM: 'Fantom',
...
