...
import WalletScreen from '@screens/WalletScreen';
import HistoryScreen from '@screens/HistoryScreen';
import DAppBrowserScreen from '@screens/dapp/DAppBrowserScreen';
import SettingsScreen from '@screens/SettingsScreen';

export type MainTabParamList = {
  Wallet: undefined;
  History: undefined;
  DApps: undefined;
  Settings: undefined;
};

const Tab = createBottomTabNavigator<MainTabParamList>();
...
